--- a/SCP_Escape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SCP_Escape/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -231,6 +231,18 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Open Door,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Open Door,InputSettings.Bindings.AxisMappings,
 WorldPartitionRuntimeSpatialHash=
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.TeleportTarget,K2Node_VariableGet.DefaultValueCategory.TeleportTarget,
+BP_Teleport_C=
+BoxComponent=PropertyWrapper.DefaultValueCategory.TeleportTarget,
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.TeleportTarget,K2Node_VariableGet.DefaultValueCategory.TeleportTarget,
+ArrowComponent=PropertyWrapper.DefaultValueCategory.TeleportTarget,K2Node_VariableGet.DefaultValueCategory.TeleportTarget,
+Character=PropertyWrapper.DefaultValueCategory.TeleportTarget,
+SceneComponent=PropertyWrapper.DefaultValueCategory.TeleportTarget,K2Node_VariableGet.DefaultValueCategory.TeleportTarget,
+BP_House_C=PropertyWrapper.DefaultValueCategory.TeleportTarget,K2Node_VariableGet.DefaultValueCategory.TeleportTarget,
+BP_Target_teleport_1_C=PropertyWrapper.DefaultValueCategory.TeleportTarget,
+StaticMeshActor=PropertyWrapper.DefaultValueCategory.TeleportTarget,
+UserConstructionScript=PropertyWrapper.DefaultValueCategory.TeleportTarget,
+BP_Heal_C=PropertyWrapper.DefaultValueCategory.TeleportTarget,K2Node_VariableGet.DefaultValueCategory.TeleportTarget,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1374,42 +1386,65 @@ BP_Door_Scrimer_2_C.Input=True
 BP_Door_Scrimer_2_C.HLOD=True
 BP_Door_Scrimer_2_C.WorldPartition=True
 BP_Door_Scrimer_2_C.Events=True
+BP_Teleport_C.Tick=True
+BP_Teleport_C.Replication=True
+BP_Teleport_C.Rendering=True
+BP_Teleport_C.Collision=True
+BP_Teleport_C.Actor=True
+BP_Teleport_C.Input=True
+BP_Teleport_C.HLOD=True
+BP_Teleport_C.WorldPartition=True
+BP_Teleport_C.Events=True
+BP_Target_Teleport_1_C.TransformCommon=True
+BP_Target_Teleport_1_C.ComponentTick=True
+BP_Target_Teleport_1_C.Rendering=True
+BP_Target_Teleport_1_C.Tags=True
+BP_Target_Teleport_1_C.ComponentReplication=True
+BP_Target_Teleport_1_C.Activation=True
+BP_Target_Teleport_1_C.Variable=True
+BP_Target_Teleport_1_C.Cooking=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.HLOD=True
+ArrowComponent.Rendering=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.Navigation=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+BP_Teleport_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/BP_Note.BP_Note
-OpenAssetsAtExit=/Game/Widgets/WB_Scrimer_1.WB_Scrimer_1
-OpenAssetsAtExit=/Game/Blueprints/BP_Lift.BP_Lift
-OpenAssetsAtExit=/Game/Blueprints/BP_Door_Scrimer_1.BP_Door_Scrimer_1
-OpenAssetsAtExit=/Game/Blueprints/BP_Damage_Ball.BP_Damage_Ball
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/BP_House.BP_House
-OpenAssetsAtExit=/Game/Blueprints/BP_Door_Scrimer_2.BP_Door_Scrimer_2
-OpenAssetsAtExit=/Game/Widgets/WB_Scrimer_2.WB_Scrimer_2
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/WB_Scrimer_2
-MRUItem1=/Game/Blueprints/BP_Door_Scrimer_2
-MRUItem2=/Game/Blueprints/BP_House
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/Blueprints/WB_Scrimer_1
-MRUItem5=/Game/Blueprints/BP_Note
-MRUItem6=/Game/Blueprints/BP_Door
-MRUItem7=/Game/Blueprints/BP_Door_Moves
-MRUItem8=/Game/Blueprints/BP_Lift
-MRUItem9=/Game/Blueprints/BP_Damage_Ball
-MRUItem10=/Game/Widgets/MainMenu
-MRUItem11=/Game/Widgets/MainMenuMode
-MRUItem12=/Game/ThirdPerson/Maps/mainMenuMap
-MRUItem13=/Game/Blueprints/photo_2022-12-05_23-20-45
-MRUItem14=/Game/Blueprints/WB_Note_1
-MRUItem15=/Game/Blueprints/BP_Enemy
-MRUItem16=/Game/Blueprints/BP_Damage_Mill
-MRUItem17=/Game/Blueprints/BP_Death_Floor
-MRUItem18=/Game/StarterContent/Shapes/Shape_Sphere
-MRUItem19=/Game/StarterContent/Shapes/Shape_NarrowCapsule
+MRUItem0=/Game/Blueprints/BP_Teleport
+MRUItem1=/Game/Blueprints/BP_Target_Teleport_1
+MRUItem2=/Game/Blueprints/BP_Enemy
+MRUItem3=/Game/Blueprints/BP_Lift
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/Blueprints/WB_Scrimer_2
+MRUItem6=/Game/Blueprints/BP_Door_Scrimer_2
+MRUItem7=/Game/Blueprints/BP_House
+MRUItem8=/Game/Blueprints/WB_Scrimer_1
+MRUItem9=/Game/Blueprints/BP_Note
+MRUItem10=/Game/Blueprints/BP_Door
+MRUItem11=/Game/Blueprints/BP_Door_Moves
+MRUItem12=/Game/Blueprints/BP_Damage_Ball
+MRUItem13=/Game/Widgets/MainMenu
+MRUItem14=/Game/Widgets/MainMenuMode
+MRUItem15=/Game/ThirdPerson/Maps/mainMenuMap
+MRUItem16=/Game/Blueprints/photo_2022-12-05_23-20-45
+MRUItem17=/Game/Blueprints/WB_Note_1
+MRUItem18=/Game/Blueprints/BP_Damage_Mill
+MRUItem19=/Game/Blueprints/BP_Death_Floor
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_Teleport.BP_Teleport;
+RecentlyPlaced=/Game/Blueprints/BP_Target_teleport_1.BP_Target_teleport_1;
 RecentlyPlaced=/Game/Blueprints/BP_Door_Scrimer_2.BP_Door_Scrimer_2;
 RecentlyPlaced=/Game/Blueprints/BP_Door_Scrimer_1.BP_Door_Scrimer_1;
 RecentlyPlaced=/Game/Blueprints/BP_Damage_Ball.BP_Damage_Ball;
@@ -1428,8 +1463,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Grime.M_Concrete_Grime;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
-RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 
 [DetailPropertyExpansion]
 StaticMesh="\"Object\" "
@@ -1441,7 +1474,7 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 BoxComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
@@ -1590,6 +1623,9 @@ ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Lay
 RichTextBlock="\"Object\" "
 MultiLineEditableTextBox="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImageNormal\" \"Object.Style.WidgetStyle.BackgroundImageHovered\" \"Object.Style.WidgetStyle.BackgroundImageFocused\" \"Object.Style.WidgetStyle.BackgroundImageReadOnly\" \"Object.Style.WidgetStyle.Font\" \"Object.Style.WidgetStyle.Font.OutlineSettings\" \"Object.Style.WidgetStyle.ScrollBarStyle\" \"Object.Style.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage\" \"Object.Style.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage\" \"Object.Style.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage\" \"Object.Style.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage\" \"Object.Style.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage\" \"Object.Style.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage\" \"Object.Style.WidgetStyle.ScrollBarStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.ScrollBarStyle.HoveredThumbImage\" \"Object.Style.WidgetStyle.ScrollBarStyle.DraggedThumbImage\" \"Object.Style.TextStyle\" \"Object.Style.TextStyle.Font\" \"Object.Style.TextStyle.Font.OutlineSettings\" \"Object.Style.TextStyle.Font.OutlineSettings.OutlineColor\" \"Object.Style.TextStyle.ColorAndOpacity\" \"Object.Style.TextStyle.HighlightShape\" \"Object.Style.TextStyle.StrikeBrush\" \"Object.Style.TextStyle.UnderlineBrush\" \"Object.Layout.Slot\" "
 Texture2D="\"Object\" "
+BP_Target_Teleport_1_C="\"Object\" "
+ArrowComponent="\"Object\" "
+BP_Teleport_C="\"Object.TeleportTarget\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Props/SM_Door.SM_Door=1
@@ -1636,6 +1672,7 @@ Texture2D="\"Object\" "
 /Game/Blueprints/BP_Door_Scrimer_1.BP_Door_Scrimer_1=1
 /Game/Blueprints/BP_Door_Scrimer_2.BP_Door_Scrimer_2=1
 /Game/Widgets/WB_Scrimer_2.WB_Scrimer_2=1
+/Game/Blueprints/BP_Teleport.BP_Teleport=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1756,7 +1793,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=117.600 Y=41.600
-WindowSize=X=1302.400 Y=742.400
+WindowSize=X=1308.800 Y=748.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
